css/style.css
/* typography */



/* fonts */
@font-face {
	font-family: SpaceGrotesk;
	src: url(../fonts/SpaceGrotesk-Regular.woff2);
	font-weight: 400;
}

@font-face {
	font-family: SpaceGrotesk;
	src: url(../fonts/SpaceGrotesk-Medium.woff2);
	font-weight: 500;
}

@font-face {
	font-family: SpaceGrotesk;
	src: url(../fonts/SpaceGrotesk-SemiBold.woff2);
	font-weight: 600;
}

@font-face {
	font-family: SpaceGrotesk;
	src: url(../fonts/SpaceGrotesk-Bold.woff2);
	font-weight: 700;
}

body {
	font-family: SpaceGrotesk, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
}


h2 {
	font-weight: 500;
	line-height: 1.4em;
	letter-spacing: 0.1px;
}

h3 {
	font-size: 1.3em;
	font-weight: 500;
}

strong {
	font-weight: 700;
}

a {
text-decoration: none;
}

.firstHeading {
	font-size: 3.5em;
	margin: 0.5rem 0rem;	
}



.exclamation {
	display: inline;
	font-family: 'Limelight', cursive;
	font-weight: 900;
	margin-left: 7px;
}



/* layout */

body {
	background: papayawhip;
	display: flex;
	justify-content: center;
}


.flexCenter {
	display: flex;
	flex-flow: column;
	align-items: center;
	width: 100vw;
	max-width: 1200px;
}


/* card and scene */

.scene {
	perspective: 700px;
}


.card {
	background: white;
	height: 80vh;
	width: 90vw;
	max-width: 1200px;
	border-radius: 1px;
	margin: 35px 0px;
	box-shadow: 0px -1px 20px -13px rgba(122, 0, 122, 1);
	display: flex;
	flex-flow: column;
	align-items: center;
	justify-items: center;
	overflow: hidden;
	display: grid;
	
}

[data-scroll] {
	transform: rotatex(calc(-10deg + (var(--visible-y) * 10deg)));
}


.inner {
	width: 85%;
	height: 90%;
	padding: 0px 5%;

}

.gridContainer {
	grid-template-rows: 65% 35%;
	grid-template-columns: 1fr;
}

.imageContainer {
	height: 100%;
	width: 100%;
	background-color: pink;
}

.imageContainer img{
	height: 100%;
	width: 100%;
	object-fit: cover;
}



/* images sizing */





/* heading card */

.altCard {
	width: 85vw;
	border-radius: 1px;
	margin: 10px;
	margin-bottom: 10px;
	display: flex;
	max-width: 1200px;
}

.headingContainer {
	width: 100%;
	max-width: 310px;
}

/* sticky layers */
.sticky {
	position: -webkit-sticky;
	position: sticky;
	top: 20px;
}

.stickytwo {
	position: -webkit-sticky;
	position: sticky;
	top: 0px;
}



/* footer */

footer {
	height: 40vh;
}


/* responsive */
/* This applies from 600px onwards */
@media (min-width: 600px) {

	/* typography */
	.firstHeading {
		font-size: 5em;
	}
	

	/* card */

	.textbox {
		padding-right: 10%;
		max-width: 700px;
	}

	.card {
		height: 65vh;
		margin-bottom: 100px;
		
	}

	.gridContainer {

		grid-template-columns: 1fr 1fr;
		grid-template-rows: 1fr;
	}

	

	/* first card */

	.altCard { 
		width: 80vw;
		padding: 60px 0px 10% 0px;
	}

	.headingContainer {
		max-width: 700px;
	}

	.sticky {
		top: 50px;
	}

	.stickytwo {
		top: 50px;
	}

	

}


/* media query for only phones */
@media screen and (max-width:600px){

	.firstHeading{
		line-height: 1;
	}

	h2 {
		margin: 0.5rem 0px;
	}

	.card {
		max-width: 400px;
	}
	
}


.spacer {
	height: 40px;
	width: 100vw;
	
}

